@@ -45,6 +45,7 @@ $variables['initbcommod']  = filter_input (INPUT_POST, 'initbcommod', FILTER_SAN
 $variables['fedsecs']      = filter_input (INPUT_POST, 'fedsecs', FILTER_SANITIZE_NUMBER_INT);
 $variables['loops']        = filter_input (INPUT_POST, 'loops', FILTER_SANITIZE_NUMBER_INT);
 $variables['swordfish']    = filter_input (INPUT_POST, 'swordfish', FILTER_SANITIZE_URL);
+$variables['autorun']      = filter_input (INPUT_POST, 'autorun', FILTER_VALIDATE_BOOLEAN, FILTER_NULL_ON_FAILURE);
 
 // Database driven language entries
 $langvars = null;
