@@ -27,7 +27,7 @@
 {/if}
 {/block}
 {block name=body}
-<form action='bigbang.php' method='post'><div style="text-align:center">
+<form name='create_universe' action='bigbang.php' method='post'><div style="text-align:center">
 <table style="border-spacing:1px; width:700px; background-color:#000; border:0px; margin-left:auto; margin-right:auto">
     <tr>
       <th colspan="2" style="text-align:left; width:700px; background-color:#9999cc; color:#000; font-size:0.8em; font-weight:normal">{$langvars['l_cu_welcome']}</th>
