@@ -1,0 +1,15 @@
+<?php
+require_once '../../../vendor/autoload.php';           // Load the auto-loader
+ob_start (array('BntCompress', 'compress'));
+
+$etag = md5_file (__FILE__); // Generate an md5sum and use it as the etag for the file, ensuring that caches will revalidate if the code itself changes
+//header('Expires: '.gmdate('D, d M Y H:i:s \G\M\T', time() + 604800));
+header ("Vary: Accept-Encoding");
+header ("Content-type: text/javascript");
+header ("Connection: Keep-Alive");
+header ("Cache-Control: public");
+header ('ETag: "' . $etag . '"');
+?>
+<!--
+document.create_universe.submit();
+-->
