@@ -1,5 +1,6 @@
 TheKabal (18 June 2013)
 --------------------------------------
+Add feature that allows big bang to run automatically if checkbox is set
 Fix weird language not being set bug where on clean install english would be English, triggering languages to be missing
 Added "bigbang", which is the proposed template driven replacement for create universe
 
